--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
-django
-djangorestframework
+asgiref==3.6.0
+Django==4.1.7
+djangorestframework==3.14.0
+flake8==3.9.2
+mccabe==0.6.1
+psycopg2==2.8.6
+pycodestyle==2.7.0
+pyflakes==2.3.1
+pytz==2022.7.1
+sqlparse==0.4.3
